# Musical

./: Musical.sh  Musical.sln  README.md
Musical/: CMakeLists.txt  Metronome.vcxproj  animation.c  animation.h  dynamic_font_atlas.c  dynamic_font_atlas.h  easing.c  easing.h  enemy.c  enemy.h  gamepad.c  gamepad.h  image.c  image.h  jewelry.c  jewelry.h  key.c  key.h  main.c  main.h  mainGame.c  mainGame.h  midi_smf.c  midi_smf.h  mouse.c  mouse.h  musicEvent.c  musicEvent.h  particle.c  particle.h  player.c  player.h  sprite.c  sprite.h  star.c  star.h  title.c  title.h  toolchain-aarch64.cmake  vector2.c  (+1 more)
Musical/img/: girl.aseprite
Musical/sound/: song.mid  ss.pkf  ss2.pkf
lib/: SDL2_ttf.lib  SDL3.lib  SDL3_mixer.lib  SDL3_ttf.lib  libSDL2_mixer-2.0.so.0  libSDL2_ttf-2.0.so.0.2400.0  timidity.lib
lib/cmake/SDL2/: SDL2Targets-release.cmake
lib/cmake/SDL2_image/: SDL2_image-shared-targets-release.cmake  SDL2_imageConfig.cmake
lib/cmake/SDL2_mixer/: SDL2_mixer-shared-targets-release.cmake  SDL2_mixerConfig.cmake
lib/cmake/SDL2_ttf/: SDL2_ttf-shared-targets-release.cmake
lib/pkgconfig/: SDL2_image.pc  SDL2_mixer.pc  SDL2_ttf.pc  sdl2.pc
